--- a/acknowledgements.tex
+++ b/acknowledgements.tex
@@ -1,15 +1,7 @@
-This is the first paragraph of your optional Acknowledgements page.
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed hendrerit
-consequat tristique. Duis venenatis tempus nisi vitae tempor. Maecenas
-ac efficitur magna. Aenean aliquam vel nibh in gravida. Sed risus
-lectus, egestas sed dignissim ac, ultrices sit amet purus. Vestibulum
-quis purus dapibus, iaculis arcu vitae, lacinia sem. Duis consequat enim
-sit amet ante dapibus porttitor. Morbi id nisl a est feugiat iaculis.
+To analogize in a loose and bizarre fashion, one might liken the contribution to the totality of human knowledge of a dissertation such as this one to the contribution of the mass of a single tardigrade to that of the planet Jupiter.
+One also might liken the expendature of effort among a vast coordinated social network necessary to accomplish both feats.
+Over the next few paragraphs, I will attempt to laud those who are share, really, the lions share of the responsibility for what is culminated in these pages.
 
-This is the second paragraph of your optional Acknowledgements page.
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed hendrerit
-consequat tristique. Duis venenatis tempus nisi vitae tempor. Maecenas
-ac efficitur magna. Aenean aliquam vel nibh in gravida. Sed risus
-lectus, egestas sed dignissim ac, ultrices sit amet purus. Vestibulum
-quis purus dapibus, iaculis arcu vitae, lacinia sem. Duis consequat enim
-sit amet ante dapibus porttitor. Morbi id nisl a est feugiat iaculis.
+Let's start at the beginning: 
+My mom, who tried to convince me before I was ready that the equality 2x = 4 was an interesting construction, who decided in her late 30s, with two kids, to earn a BA in finance, and who then became the first person in her family to get a graduate degree (in counseling).
+My dad, whose sense of justice and service is a constant touch stone as I and others navigate a renaissance in scientific practice.
