--- a/dissertation.bib
+++ b/dissertation.bib
@@ -7124,4 +7124,58 @@ CONCLUSIONS: Computational approaches allow us to disentangle contributions of m
   file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/JT4L87EK/Mallett et al. - 2009 - Assessing college students' perceptions of toleran.pdf}
 }
 
+@article{lease2002,
+  langid = {english},
+  title = {Dimensions of {{Social Status}} in {{Preadolescent Peer Groups}}: {{Likability}}, {{Perceived Popularity}}, and {{Social Dominance}}},
+  volume = {11},
+  issn = {0961-205X, 1467-9507},
+  url = {http://doi.wiley.com/10.1111/1467-9507.00213},
+  doi = {10.1111/1467-9507.00213},
+  shorttitle = {Dimensions of {{Social Status}} in {{Preadolescent Peer Groups}}},
+  abstract = {A multidimensional, interdisciplinary model of social status was developed and examined in a sample of 487 fourth, ﬁfth, and sixth grade elementary school students. Participants were clustered into seven subtypes (i.e., High Status, Perceived Popular/Dominant, Well-Liked/Dominant, Average, Low Dominant/Unpopular, Disliked, and Low Status) based on the dimensions of likability, perceived popularity, and social dominance emphasized, respectively, by psychologists working within the sociometric tradition, sociologists of education, and ethologists. The meaningfulness of the cluster solution was supported by cluster differences on peer-reported social prerogatives of status (e.g., admiration, social control, leadership) and selfreported social characteristics. Furthermore, each cluster had a distinct behavioral proﬁle. It was argued that a broader, multidisciplinary conceptualization of social status should lead to a better understanding of the complex dynamics present in children’s peer groups in middle childhood as well as the tools preadolescents need to successfully navigate the peer system.},
+  number = {4},
+  journaltitle = {Social Development},
+  urldate = {2018-07-16},
+  date = {2002-11},
+  pages = {508-533},
+  author = {Lease, A. Michele and Musgrove, Karen T. and Axelrod, Jennifer L.},
+  file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/AFWPNZUS/Lease et al. - 2002 - Dimensions of Social Status in Preadolescent Peer .pdf}
+}
+
+@article{vanbokhoven2006,
+  langid = {english},
+  title = {Salivary Testosterone and Aggression, Delinquency, and Social Dominance in a Population-Based Longitudinal Study of Adolescent Males},
+  volume = {50},
+  issn = {0018506X},
+  url = {http://linkinghub.elsevier.com/retrieve/pii/S0018506X06000304},
+  doi = {10.1016/j.yhbeh.2006.02.002},
+  abstract = {Testosterone (T) has been found to have a stimulating effect on aggressive behavior in a wide range of vertebrate species. There is also some evidence of a positive relationship in humans, albeit less consistently. In the present study we investigated the relationship between T and aggression, dominance and delinquency over time, covering a period from early adolescence to adulthood. From a large population-based sample (n = 1.161) a subgroup of 96 boys was selected whose behavior had been assessed repeatedly by different informants from age 12 to 21 years, and who had provided multiple T samples over these years of assessment. On the whole, a decrease in aggressive and delinquent behavior was observed in a period in which T rises dramatically. Boys who developed a criminal record, had higher T levels at age 16. In addition, positive associations were observed between T and proactive and reactive aggression and self-reported delinquent behavior. Over the pubertal years different forms of aggressive and delinquent behavior were positively related to T, which may indicate that specific positive links are dependent on the social setting in which this relationship is assessed.},
+  number = {1},
+  journaltitle = {Hormones and Behavior},
+  urldate = {2018-07-16},
+  date = {2006-06},
+  pages = {118-125},
+  author = {van Bokhoven, Irene and van Goozen, Stephanie H.M. and van Engeland, Herman and Schaal, Benoist and Arseneault, Louise and Séguin, Jean R. and Assaad, Jean-Marc and Nagin, Daniel S. and Vitaro, Frank and Tremblay, Richard E.},
+  options = {useprefix=true},
+  file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/PKDKZER7/van Bokhoven et al. - 2006 - Salivary testosterone and aggression, delinquency,.pdf}
+}
+
+@article{kiefer2008,
+  langid = {english},
+  title = {Striving for Social Dominance over Peers: {{The}} Implications for Academic Adjustment during Early Adolescence.},
+  volume = {100},
+  issn = {1939-2176, 0022-0663},
+  url = {http://doi.apa.org/getdoi.cfm?doi=10.1037/0022-0663.100.2.417},
+  doi = {10.1037/0022-0663.100.2.417},
+  shorttitle = {Striving for Social Dominance over Peers},
+  abstract = {This study investigated the proposal that social dominance goals are an important, but overlooked, aspect of social goals for young adolescents’ academic adjustment. Self-reports of social goals (dominance, intimacy, and popularity goals) early in the school year were used to predict subsequent engagement (self-reports and peer nominations of effort toward school work and disruptive behavior) and achievement (i.e., grades) when students were in 6th grade (N ϭ 718) and again after the transition to middle school when students were in 7th grade (N ϭ 656; 52\% African American and 48\% White; 52\% female and 48\% male). In line with hypotheses, social dominance goals were associated with maladaptive forms of engagement and low achievement in 6th and 7th grades. For intimacy goals, relations were more limited, but when found, these goals were associated with adaptive forms of engagement in 6th and 7th grades. Popularity goals were not generally associated with engagement or achievement. The exception was 6th-grade African American girls, for whom popularity goals were associated with maladaptive engagement. (i.e., low effort, high disruptive behavior, and low peer nominations for trying hard and getting good grades).},
+  number = {2},
+  journaltitle = {Journal of Educational Psychology},
+  urldate = {2018-07-16},
+  date = {2008},
+  pages = {417-428},
+  author = {Kiefer, Sarah M. and Ryan, Allison M.},
+  file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/KZWXG9RH/Kiefer and Ryan - 2008 - Striving for social dominance over peers The impl.pdf}
+}
+
 
